--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,12 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: sudo apt-get install -y autoconf automake libtool
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y meson ninja-build libusb-1.0-0-dev
 
     - name: Configure
-      run: ./configure
-      working-directory: ./src/ldr
+      run: meson setup builddir
 
     - name: Build
-      run: make
-      working-directory: ./src/ldr
+      run: meson compile -C builddir
