use latest git tag for project version
Packaging tools like Buildroot are based on source archives without git
history. Therefore for each Github release generate a release archive
using `meson dist`, which adds a version using `git describe` to the
meson.build file in the archive, and upload that archive to the release.
On the corresponding release page under Assets there will be a archive
named adsp-ldr-vX.Y.Z.tar.xz.

Signed-off-by: Philip Molloy <philip@philipmolloy.com>

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,15 @@
 project('adsp-ldr', 'c',
-  version : 'v1.0.0',
-  meson_version : '>= 0.56.0',
+  version : run_command(
+    ['utils/version.sh', 'get-vcs'],
+    check: true
+  ).stdout().strip(),
+  meson_version : '>= 1.4.0',
 )
 
+meson.add_dist_script('utils/version.sh', 'set-dist', meson.project_version())
+
 add_project_arguments('-D_GNU_SOURCE', language : 'c')
+add_project_arguments('-DVERSION="' + meson.project_version() + '"', language : 'c')
 
 cc = meson.get_compiler('c')
 
