add test to dump and verify DXEs in bf548.ldr
Command and hashes copied from src/ldr/tests/dump.at. Note that the test
was broken because it lacked the -T flag:

  ldr: please select a target with -T <target>

The ADSP-BF548 is a Blackfin processor released in 2007 and still in
production.

Signed-off-by: Philip Molloy <philip@philipmolloy.com>

--- a/meson.build
+++ b/meson.build
@@ -30,8 +30,17 @@ sources = [
   'src/ldr/lfd_sc589.c',
 ]
 
-executable('ldr',
+exe = executable('ldr',
   sources,
   dependencies : [threads, libusb],
   install : true,
 )
+
+test('Dump DXEs from example bf548.ldr', exe,
+  args : ['-T', 'BF548', '--dump', join_paths(meson.project_source_root(), 'tests/data/bf548.ldr')],
+  is_parallel : false)
+
+test('Verify hash of BF548 DXEs',
+  find_program('tests/verify-bf548-md5.sh'),
+  workdir : meson.project_source_root(),
+  is_parallel : false)
