add test to dump and verify DXEs in bf548.ldr
Command and hashes copied from src/ldr/tests/dump.at. Note that the test
was broken because it lacked the -T flag:

  ldr: please select a target with -T <target>

The ADSP-BF548 is a Blackfin processor released in 2007 and still in
production.

Signed-off-by: Philip Molloy <philip@philipmolloy.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 builddir
+tests/data/bf548.ldr-0.dxe
+tests/data/bf548.ldr-0.dxe-1.block
+tests/data/bf548.ldr-0.dxe-2.block
+tests/data/bf548.ldr-0.dxe-21.block
+tests/data/bf548.ldr-0.dxe-30.block
