--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: fedora:latest
 
     steps:
-    - uses: actions/checkout@v5
-      with:
-        fetch-depth: 0
-
     - name: Install dependencies
       run: |
-        sudo dnf install -y gcc git meson ninja-build libusb1-devel
+        sudo apt-get install -y libusb-1.0-0-dev
+        pip install meson
+
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Configure
       run: meson setup builddir
